--- a/src/components/DefaultButton/styles.module.css
+++ b/src/components/DefaultButton/styles.module.css
@@ -1,29 +1,34 @@
-.input {
-  background-color: transparent;
+.button {
   border: none;
-  text-align: center;
-  font-size: 1.6rem;
+  background: var(--primary);
+  color: var(--text-over-primary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 24rem;;
   padding: 0.8rem;
-  color: var(--text-default);
-  outline: none;
-
-  border: 0.2rem solid transparent;
-  border-bottom: 0.2rem solid var(--primary);
+  border-radius: 0.8rem;
+  margin: 4.8rem 0;
+  cursor: pointer;
   transition: all 0.1s ease-in-out;
 }
 
-.input:focus {
-  border-radius: 0.8rem;
-  border: 0.2rem solid var(--primary);
+.button svg {
+  width: 3.2rem;
+  height: 3.2rem;
 }
 
-.input::placeholder {
-  color: var(--gray-500);
-  font-size: 1.4rem;
-  font-style: italic;
+.button:hover {
+  filter: brightness(80%);
 }
 
-.input:disabled {
-  border-bottom: 0.2rem solid var(--disabled);
-  color: var(--text-muted);
+.red {
+  background: var(--error);
+  color: var(--text-over-error);
 }
+
+.green {
+  background: var(--primary);
+  color: var(--text-over-primary);
+}
+
